Thu Jan 15 16:50:32 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* performance-tests/RTCorba/Multiple_Endpoints/Orb_Per_Priority/ORB_Per_Priority.mpc:
	* performance-tests/RTCorba/Multiple_Endpoints/Single_Endpoint/Single_Endpoint.mpc:
	  Removed avoids += minimum_corba from these files because it is now set
	  in rtcorbacommon.

Thu Jan 15 16:14:01 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/RTCosScheduling/testSched_export.h:
        * orbsvcs/performance-tests/RTEvent/lib/rtec_perf_export.h:
        * docs/tutorials/Quoter/idl/quoter_common_export.h:
        * tests/CodeSets/libs/IBM1047_ISO8859/IBM1047_ISO8859_export.h:
        * tests/CodeSets/libs/UCS4_UTF16/WUCS4_UTF16_export.h:
          Added check for TAO_AS_STATIC_LIBS for setting the export flags for
          proper building of static libraries.

Thu Jan 15 08:12:14 2004  Chad Elliott  <elliott_c@ociweb.com>

        * TAO_IDL/tao_idl.mpc:
        * orbsvcs/IFR_Service/IFR_Service.mpc:

          Replaced the use of the idlpreprocessor keyword with verbatim
          clauses that give the same results.

Wed Jan 14 18:46:49 2004  Balachandran  <bala@dre.vanderbilt.edu>

        * TAO version 1.4 released.

Wed Jan 14 15:25:55 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * docs/releasenotes/index.html:

          Added a link to CIDLC from the releasenotes.

Wed Jan 14 14:55:18 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * Makefile:

          Removed orbsvcs/README from the release process.

Wed Jan 14 11:41:00 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * docs/releasenotes/index.html:

          Added a link to CIAO.

Wed Jan 14 09:47:56 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * */*_Static.ds[p,w]:

          All the Win32 static projects and workspaces have been
          removed. Please use MPC to generate them.
