@@ -366,6 +366,16 @@ AST_Interface::fe_add_field (AST_Field *t)
                            I_FALSE,
                            t->local_name ());
 
+  AST_Type *ft = t->field_type ();
+  UTL_ScopedName *mru = ft->last_referenced_as ();
+
+  if (mru != 0)
+    {
+      this->add_to_referenced (ft,
+                               I_FALSE,
+                               mru->first_component ());
+    }
+
   return t;
 }
 
